# MPI

./: README.md
lab1Rectangle/: CMakeLists.txt  README.md  consistent.cpp  parallel.cpp
lab1Rectangle/Results/: Graph.m  exampleOfSolution.fig
lab1Triangle/: CMakeLists.txt  consistent.c  parallel.c
lab1Triangle/Results/: Results.ods
lab2/: CMakeLists.txt  README.md  integral1.cpp  integral2.cpp  integral3.cpp  integral4.cpp  kek
lab3/: CMakeLists.txt  report.md
lab3/src/: consistent2d.c  consistentMain.c  parallel2d.c  parallelMain.c  parallelMainOther.c
